--- a/reference/devices.v1.yaml
+++ b/reference/devices.v1.yaml
@@ -152,6 +152,25 @@ paths:
                   dateOfBirth: '1996-08-24'
         description: Post the necessary fields for the API to create a new user.
       description: Create a new user.
+  '/api/devices/{accountid}':
+    get:
+      summary: getDevices
+      tags: []
+      responses: {}
+      operationId: get-api-devices
+    post:
+      summary: newDevice
+      tags: []
+      responses: {}
+      operationId: post-api-devices
+    parameters:
+      - schema:
+          type: string
+          example: jetsonsHome
+        name: accountid
+        in: path
+        required: true
+        description: unique account id
 components:
   schemas:
     User:
