Created Models and an OAS file to describe the API

--- a/reference/devices.v1.yaml
+++ b/reference/devices.v1.yaml
@@ -180,8 +180,22 @@ paths:
     post:
       summary: newDevice
       tags: []
-      responses: {}
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: ../models/responseCode.v1.yaml
       operationId: post-api-devices
+      parameters:
+        - $ref: '#/components/parameters/deviceName'
+        - $ref: '#/components/parameters/spaceid'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: ../models/device.v1.json
     parameters:
       - schema:
           type: string
